--- a/PROYECTO ARBOL AVL/.vscode/settings.json
+++ b/PROYECTO ARBOL AVL/.vscode/settings.json
@@ -62,7 +62,8 @@
     "map": "cpp",
     "regex": "cpp",
     "fstream": "cpp",
-    "set": "cpp"
+    "set": "cpp",
+    "thread": "cpp"
   },
   "C_Cpp_Runner.cCompilerPath": "gcc",
   "C_Cpp_Runner.cppCompilerPath": "g++",
